Adds Modal component

--- a/src/components/Calendar/Calendar.module.scss
+++ b/src/components/Calendar/Calendar.module.scss
@@ -4,7 +4,7 @@
   width: 100%;
   max-width: 600px;
   margin: 2rem auto;
-  background-color: #fdfdfd;
+  background-color: lightgoldenrodyellow;
   padding: 1rem;
   border-radius: 8px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
