--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -8,7 +8,7 @@
 
 .title {
   font-size: 2.5rem;
-  font-weight: bold;
+  font-weight: 500;
   font-family: "Fredoka";
   color: $pompelmo;
   margin-bottom: 0.5rem;
